fix: update selector for centered alignment in form-item styles

--- a/src/components/slots/form-item/form-item.scss
+++ b/src/components/slots/form-item/form-item.scss
@@ -19,7 +19,7 @@
   }
 
   &--centered {
-    &__row {
+    .form-item__row {
       align-items: center;
     }
   }
